# drive

./: .dockerignore  .gitignore  CHANGELOG.md  CUSTOM_COLUMNS_DOC.md  Dockerfile  Makefile  Procfile  README.md  compose.yaml  drive-0.0.1.tgz  drive-0.0.2.tgz  drive-0.0.3.tgz  drive-0.1.0.tgz  drive-0.1.1.tgz  drive-0.10.0.tgz  drive-0.10.1.tgz  drive-0.11.0.tgz  drive-0.11.1.tgz  drive-0.12.0-beta.1.tgz  drive-0.12.0.tgz  drive-0.13.0-beta.1.tgz  drive-0.13.0.tgz  drive-0.14.0.tgz  drive-0.15.0.tgz  drive-0.16.0.tgz  drive-0.17.0.tgz  drive-0.18.0.tgz  drive-0.2.0.tgz  drive-0.3.0-beta.1.tgz  drive-0.3.0.tgz  drive-0.4.0-beta.1.tgz  drive-0.4.0-beta.2.tgz  drive-0.4.0.tgz  drive-0.5.0-beta.1.tgz  drive-0.5.0-beta.2.tgz  drive-0.5.0.tgz  drive-0.6.0-beta.1.tgz  drive-0.6.0-beta.2.tgz  drive-0.6.0.tgz  drive-0.7.0.tgz  (+7 more)
src/backend/: .pylintrc  pyproject.toml
src/backend/core/: admin.py  apps.py  factories.py  malware_detection.py  models.py  signals.py  urls.py
src/backend/core/api/: fields.py  filters.py  permissions.py  serializers.py  serializers_mounts.py  serializers_share_links.py  utils.py  viewsets.py
src/backend/core/authentication/: __init__.py  backends.py  exceptions.py  views.py
src/backend/core/ct_s3/: __init__.py  constants.py  evidence.py  http_client.py  runner.py  safe.py  types.py
src/backend/core/entitlements/: __init__.py  anct_entitlements_backend.py  dummy_entitlements_backend.py  entitlements_backend.py  factory.py
src/backend/core/entitlements/backends/: base.py  deploycenter.py  local.py
src/backend/core/external_api/: __init__.py  authentication.py  permissions.py  viewsets.py
src/backend/core/file_templates/: template.odp  template.ods  template.odt
src/backend/core/management/commands/: bucket_cors.py  clean_pending_items.py  config_preflight.py  convert_paths.py  create_uuid_path.py  ct_s3.py  index.py  prepare_mirroring_items_history.py  process_pending_mirror_tasks.py  purge_deleted_items.py  sync_item_numchild.py  update_suspicious_item_file_hash.py
src/backend/core/migrations/: 0001_initial.py  0008_alter_item_options_and_more.py  0008_alter_item_options_textchunk.py  0009_alter_user_language.py  0010_active_unnaccent_postgres_extension.py  0010_alter_item_upload_state.py  0011_update_items_upload_state_value.py  0012_item_malware_detection_info.py  0013_active_unnaccent_postgres_extension.py  0014_alter_user_language.py  0015_user_claims_alter_user_language.py  0016_alter_item_link_reach.py  0016_mirroritemtask.py  0017_alter_user_short_name.py  0017_user_last_release_note_seen.py  0018_item_upload_started_at.py  0018_mirroritemtask.py  0019_user_last_release_note_seen.py  0020_merge_0018_item_upload_started_at_0019_user_last_release_note_seen.py  0020_remove_item_numchild_path_nlevel_idx.py  0020_user_column_preferences.py  0021_item_encryption_fields.py  0021_mount_share_link.py  0021_user_column_preferences.py
src/backend/core/mounts/: __init__.py  paths.py  registry.py
src/backend/core/mounts/providers/: __init__.py  base.py  smb.py  static.py
src/backend/core/services/: item_exports.py  mirror.py  mount_capabilities.py  mounts_registry.py  odf_templates.py  ooxml_templates.py  sdk_relay.py  search_indexers.py  secret_resolver.py
src/backend/core/storage/: __init__.py  creator_storage_compute_backend.py  s3_mirroring_storage.py  storage_compute_backend.py
src/backend/core/tasks/: item.py  search.py  storage.py
src/backend/core/templatetags/: extra_tags.py
src/backend/core/tests/: conftest.py  test_allowlists.py  test_api_config.py  test_api_entitlements.py  test_api_entitlements_anct.py  test_api_entitlements_deploycenter.py  test_api_sdk_relay.py  test_api_users.py  test_api_utils_detect_mimetype.py  test_api_utils_flat_to_nested.py  test_api_utils_format_template_filename.py  test_api_utils_is_previewable_item.py  test_api_utils_sanitize_filename.py  test_ct_s3_evidence.py  test_ct_s3_failure_schema.py  test_malware_detection.py  test_models_invitations.py  test_models_item_accesses.py  test_models_items.py  test_models_items_indexer.py  test_models_items_root.py  test_models_users.py  test_mounts_registry.py  test_public_url.py  test_services_item_exports.py  test_services_search_indexers.py  test_settings.py  test_strict_mirror_check_extraction.py  test_strict_mirror_fingerprint.py  test_user_token_api.py  test_utils_get_app_url.py  test_utils_get_url_app.py
src/backend/core/tests/authentication/: test_backends.py  test_views.py
src/backend/core/tests/commands/: test_clean_pending_items.py  test_config_preflight.py  test_index.py  test_prepare_mirroring_items_history.py  test_process_pending_mirror_tasks.py  test_purge_deleted_items.py  test_sync_item_numchild.py  test_update_suspicious_item_file_hash.py
src/backend/core/tests/external_api/: test_api_users.py  test_external_api_users.py  utils.py
src/backend/core/tests/items/: conftest.py  test_api_item_accesses.py  test_api_item_accesses_create.py  test_api_item_invitations.py  test_api_item_upload_ended.py  test_api_item_upload_recovery.py  test_api_items_breadcrumb.py  test_api_items_children_create.py  test_api_items_children_list.py  (+29 more)
src/backend/core/user_token/: serializers.py
src/backend/core/utils/: __init__.py  allowlists.py  analytics.py  item_title.py  keyed_hash.py  no_leak.py  public_url.py  rotating_resource.py  secret_refs.py  secret_resolver.py  share_links.py  strict_mirror.py
src/backend/demo/: defaults.py  urls.py  viewsets.py
src/backend/demo/tests/: test_commands_create_demo.py
src/backend/drive/: __init__.py  celery_app.py  settings.py  urls.py
src/backend/e2e/: serializers.py  urls.py  utils.py  viewsets.py
src/backend/e2e/tests/: test_api_e2e.py
src/backend/wopi/: apps.py  authentication.py  enums.py  exceptions.py  permissions.py  routers.py  urls.py  viewsets.py
src/backend/wopi/services/: access.py  health.py  lock.py  s3_prerequisites.py
src/backend/wopi/tasks/: configure_wopi.py
src/backend/wopi/tests/: conftest.py  test_settings.py  test_utils.py
src/backend/wopi/utils/: __init__.py  signature.py
(+1122 files in other folders)
